--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,7 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+dependencies = ["sqlfluff"]
+
 [tool.maturin]
 features = ["pyo3/extension-module"]
