--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 fancy-regex = "0.14.0"
+hashbrown = "0.15.2"
 itertools = "0.14.0"
 log = "0.4.25"
 once_cell = "1.20.2"
-pyo3 = "0.23.5"
+pyo3 = { version = "0.23.5", features = ["hashbrown"] }
 regex = { version = "1.11.1", features = ["perf"] }
 uuid = { version = "1.12.1", features = ["v4"] }
 
