--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,16 @@ name = "rsqlfluff"
 crate-type = ["cdylib"]
 
 [dependencies]
+env_logger = "0.11.6"
 fancy-regex = "0.14.0"
 hashbrown = "0.15.2"
 itertools = "0.14.0"
 log = "0.4.25"
 once_cell = "1.20.2"
 pyo3 = { version = "0.23.5", features = ["hashbrown"] }
+pyo3-log = "0.12.1"
 regex = { version = "1.11.1", features = ["perf"] }
+slotmap = "1.0.7"
 uuid = { version = "1.12.1", features = ["v4"] }
 
 [dev-dependencies]
