--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ edition = "2021"
 name = "rsqlfluff"
 crate-type = ["cdylib"]
 
+[features]
+unicode = []
+python = ["unicode", "pyo3"]
+
 [dependencies]
 env_logger = "0.11.6"
 fancy-regex = "0.14.0"
@@ -15,8 +19,8 @@ hashbrown = "0.15.2"
 itertools = "0.14.0"
 log = "0.4.25"
 once_cell = "1.20.2"
-pyo3 = { version = "0.23.5", features = ["hashbrown"] }
-pyo3-log = "0.12.1"
+pyo3 = { version = "0.24.2", optional = true, features = ["hashbrown", "extension-module"] }
+pyo3-log = { version = "0.12.1", optional = true }
 regex = { version = "1.11.1", features = ["perf"] }
 slotmap = "1.0.7"
 uuid = { version = "1.12.1", features = ["v4"] }
